fix: started repository implementation